apply button issue, spacing insights home page

--- a/themes/custom/athena/assets/styles/modules/_coursePageBannerSection.scss
+++ b/themes/custom/athena/assets/styles/modules/_coursePageBannerSection.scss
@@ -158,7 +158,7 @@
         display: flex;
         align-items: center;
 
-        button {
+        a.apply-btn, button {
             font-size: .69rem;
             margin-right: 14px;
             letter-spacing: .2px;
